--- a/Carfax Vehicles/Base.lproj/Main.storyboard
+++ b/Carfax Vehicles/Base.lproj/Main.storyboard
@@ -22,66 +22,65 @@
                                 <rect key="frame" x="0.0" y="44" width="375" height="734"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="180" id="Poz-kz-Y8m" customClass="CarTableViewCell" customModule="Carfax_Vehicles" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="180"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="176" id="Poz-kz-Y8m" customClass="CarTableViewCell" customModule="Carfax_Vehicles" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="176"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Poz-kz-Y8m" id="5ud-Ed-ooO">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="179.66666666666666"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="175.66666666666666"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8JI-cU-K7H" customClass="CachingImageView" customModule="Carfax_Vehicles" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="97.666666666666671"/>
-                                                    <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2014 Acura ILX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="owm-kk-YKA">
-                                                    <rect key="frame" x="15" y="105" width="345" height="15.666666666666671"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="CTS-FP-YCz">
-                                                    <rect key="frame" x="15" y="128" width="345" height="15.666666666666657"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="6nX-4I-M0M">
+                                                    <rect key="frame" x="20" y="20" width="335" height="135.66666666666666"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$28,495" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ctP-kY-pbq">
-                                                            <rect key="frame" x="0.0" y="0.0" width="89.666666666666671" height="15.666666666666666"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="camaro" translatesAutoresizingMaskIntoConstraints="NO" id="8JI-cU-K7H">
+                                                            <rect key="frame" x="0.0" y="0.0" width="335" height="58.333333333333336"/>
+                                                            <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="8JI-cU-K7H" secondAttribute="height" multiplier="4:3" id="5XS-Za-8Nd"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2014 Acura ILX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="owm-kk-YKA">
+                                                            <rect key="frame" x="0.0" y="64.333333333333329" width="335" height="15.666666666666671"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100k Mi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sHe-xF-CH2">
-                                                            <rect key="frame" x="89.666666666666686" y="0.0" width="78" height="15.666666666666666"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="CTS-FP-YCz">
+                                                            <rect key="frame" x="0.0" y="86" width="335" height="15.666666666666671"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$28,495" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ctP-kY-pbq">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="87.333333333333329" height="15.666666666666666"/>
+                                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100k Mi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sHe-xF-CH2">
+                                                                    <rect key="frame" x="87.333333333333343" y="0.0" width="75.333333333333343" height="15.666666666666666"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fredricksburg, VA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kB7-rb-OaC">
+                                                                    <rect key="frame" x="162.66666666666663" y="0.0" width="172.33333333333337" height="15.666666666666666"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x3m-vp-IeJ">
+                                                            <rect key="frame" x="0.0" y="107.66666666666667" width="335" height="28.000000000000014"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fredricksburg, VA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kB7-rb-OaC">
-                                                            <rect key="frame" x="167.66666666666663" y="0.0" width="177.33333333333337" height="15.666666666666666"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                            <state key="normal" title="(714)979-3030"/>
+                                                        </button>
                                                     </subviews>
                                                 </stackView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x3m-vp-IeJ">
-                                                    <rect key="frame" x="15" y="147.66666666666666" width="345" height="28"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                    <state key="normal" title="(714)979-3030"/>
-                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="8JI-cU-K7H" firstAttribute="leading" secondItem="5ud-Ed-ooO" secondAttribute="leading" id="1b7-9k-34l"/>
-                                                <constraint firstAttribute="trailing" secondItem="CTS-FP-YCz" secondAttribute="trailing" constant="15" id="3cR-za-xK2"/>
-                                                <constraint firstItem="x3m-vp-IeJ" firstAttribute="top" secondItem="CTS-FP-YCz" secondAttribute="bottom" constant="4" id="5dC-gV-odO"/>
-                                                <constraint firstAttribute="trailing" secondItem="8JI-cU-K7H" secondAttribute="trailing" id="7NL-Xw-5sE"/>
-                                                <constraint firstItem="owm-kk-YKA" firstAttribute="top" secondItem="8JI-cU-K7H" secondAttribute="bottom" constant="7.3300000000000001" id="HHt-fB-1Jq"/>
-                                                <constraint firstAttribute="bottom" secondItem="x3m-vp-IeJ" secondAttribute="bottom" constant="4" id="SF5-YB-iAF"/>
-                                                <constraint firstItem="8JI-cU-K7H" firstAttribute="top" secondItem="5ud-Ed-ooO" secondAttribute="top" id="T0S-km-kAb"/>
-                                                <constraint firstItem="CTS-FP-YCz" firstAttribute="leading" secondItem="5ud-Ed-ooO" secondAttribute="leading" constant="15" id="XBB-uh-jGa"/>
-                                                <constraint firstItem="CTS-FP-YCz" firstAttribute="top" secondItem="owm-kk-YKA" secondAttribute="bottom" constant="7.3333333333333286" id="hmP-oz-d8g"/>
-                                                <constraint firstItem="x3m-vp-IeJ" firstAttribute="leading" secondItem="5ud-Ed-ooO" secondAttribute="leading" constant="15" id="kOd-sE-w2O"/>
-                                                <constraint firstItem="owm-kk-YKA" firstAttribute="leading" secondItem="5ud-Ed-ooO" secondAttribute="leading" constant="15" id="o0V-4H-CSQ"/>
-                                                <constraint firstAttribute="trailing" secondItem="owm-kk-YKA" secondAttribute="trailing" constant="15" id="qxB-vh-RMp"/>
-                                                <constraint firstAttribute="trailing" secondItem="x3m-vp-IeJ" secondAttribute="trailing" constant="15" id="tBi-3c-QbJ"/>
+                                                <constraint firstItem="6nX-4I-M0M" firstAttribute="top" secondItem="5ud-Ed-ooO" secondAttribute="top" constant="20" id="7Pv-y6-OmF"/>
+                                                <constraint firstAttribute="trailing" secondItem="6nX-4I-M0M" secondAttribute="trailing" constant="20" id="FDJ-sB-Iap"/>
+                                                <constraint firstAttribute="bottom" secondItem="6nX-4I-M0M" secondAttribute="bottom" constant="20" id="SIM-Iy-pAU"/>
+                                                <constraint firstItem="6nX-4I-M0M" firstAttribute="leading" secondItem="5ud-Ed-ooO" secondAttribute="leading" constant="20" id="Xpo-pe-4Dw"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -118,4 +117,7 @@
             <point key="canvasLocation" x="138.40000000000001" y="138.91625615763547"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="camaro" width="480" height="360"/>
+    </resources>
 </document>
